[gd_scene load_steps=5 format=3 uid="uid://bb7s8ek83dose"]

[ext_resource type="Script" path="res://constructions/Construction.gd" id="1_1nqft"]
[ext_resource type="Script" path="res://constructions/features/structure_feature_context.gd" id="2_t6tl6"]
[ext_resource type="Script" path="res://constructions/structure.gd" id="3_kqi5g"]
[ext_resource type="Script" path="res://addons/CustomNodesManager/geometry/circle_2d.gd" id="4_1tf8q"]

[node name="Construction" type="CharacterBody2D"]
script = ExtResource("1_1nqft")

[node name="FeaturesContext" type="Node" parent="."]
script = ExtResource("2_t6tl6")

[node name="Structure" type="Node" parent="."]
script = ExtResource("3_kqi5g")

[node name="Visual" type="Node2D" parent="."]
script = ExtResource("4_1tf8q")
radius = 5

[node name="Shape" type="CollisionShape2D" parent="."]

[connection signal="feature_execution_requested" from="Structure" to="." method="_on_structure_feature_execution_requested"]
[connection signal="move_produced" from="Structure" to="." method="_on_structure_move_produced"]
[connection signal="selfdestruction_requested" from="Structure" to="." method="_on_structure_selfdestruction_requested"]
